# tiltshift

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  README.md  TODO.md  flake.nix
.claude/: settings.json
.githooks/: pre-commit
docs/: index.md  introduction.md  package.json  signals.md
docs/.vitepress/: config.ts
docs/cli/: analyze.md  annotate.md  anomaly.md  cluster.md  corpus.md  decode.md  descend.md  diff.md  magic.md  obfuscate.md  opcodes.md  probe.md  region.md  scan.md
tiltshift/: Cargo.toml
tiltshift/data/: magic.toml
tiltshift/src/: cluster.rs  constraint.rs  hypothesis.rs  lib.rs  loader.rs  main.rs  opcodes.rs  probe.rs  search.rs  session.rs  types.rs
tiltshift/src/corpus/: mod.rs
tiltshift/src/signals/: alignment.rs  bytecode.rs  chisq.rs  chunk.rs  compress.rs  entropy.rs  length_prefix.rs  magic.rs  mod.rs  ngram.rs  numeric.rs  offset_graph.rs  packed.rs  padding.rs  strings.rs  tlv.rs  varint.rs
