[package]
name = "tiltshift"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tiltshift"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
