[package]
name = "tiltshift"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tiltshift"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
aho-corasick = "1"
anyhow = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
glob = "0.3"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hdbscan = { version = "0.12", features = ["parallel"] }
